--- a/index.html
+++ b/index.html
@@ -7341,7 +7341,7 @@ background: var(--primary-dark);
 <h5>First Semester</h5>
 <div class="subjects-table">
 <div class="subject-row header">
-<div class="subject-code">SUBJECT/</div>
+<div class="subject-code">COURSE CODE</div>
 <div class="subject-title">Subject Title</div>
 <div class="subject-prerequisite">Pre-requisite</div>
 <div class="subject-units">Units</div>
@@ -7403,7 +7403,7 @@ background: var(--primary-dark);
 <h5>Second Semester</h5>
 <div class="subjects-table">
 <div class="subject-row header">
-<div class="subject-code">SUBJECT/<br>COUSRSE CODE</div>
+<div class="subject-code">COURSE CODE</div>
 <div class="subject-title">Subject Title</div>
 <div class="subject-prerequisite">Pre-requisite</div>
 <div class="subject-units">Units</div>
@@ -7470,7 +7470,7 @@ background: var(--primary-dark);
 <h5>First Semester</h5>
 <div class="subjects-table">
 <div class="subject-row header">
-<div class="subject-code">SUBJECT/<br>COUSRSE CODE</div>
+<div class="subject-code">COURSE CODE</div>
 <div class="subject-title">Subject Title</div>
 <div class="subject-prerequisite">Pre-requisite</div>
 <div class="subject-units">Units</div>
@@ -7533,7 +7533,7 @@ background: var(--primary-dark);
 <h5>Second Semester</h5>
 <div class="subjects-table">
 <div class="subject-row header">
-<div class="subject-code">SUBJECT/<br>COUSRSE CODE</div>
+<div class="subject-code">COURSE CODE</div>
 <div class="subject-title">Subject Title</div>
 <div class="subject-prerequisite">Pre-requisite</div>
 <div class="subject-units">Units</div>
@@ -7601,7 +7601,7 @@ background: var(--primary-dark);
 <h5>First Semester</h5>
 <div class="subjects-table">
 <div class="subject-row header">
-<div class="subject-code">SUBJECT/<br>COUSRSE CODE</div>
+<div class="subject-code">COURSE CODE</div>
 <div class="subject-title">Subject Title</div>
 <div class="subject-prerequisite">Pre-requisite</div>
 <div class="subject-units">Units</div>
@@ -7664,7 +7664,7 @@ background: var(--primary-dark);
 <h5>Second Semester</h5>
 <div class="subjects-table">
 <div class="subject-row header">
-<div class="subject-code">SUBJECT/<br>COUSRSE CODE</div>
+<div class="subject-code">COURSE CODE</div>
 <div class="subject-title">Subject Title</div>
 <div class="subject-prerequisite">Pre-requisite</div>
 <div class="subject-units">Units</div>
@@ -7724,7 +7724,7 @@ background: var(--primary-dark);
 <h5>First Semester</h5>
 <div class="subjects-table">
 <div class="subject-row header">
-<div class="subject-code">SUBJECT/<br>COUSRSE CODE</div>
+<div class="subject-code">COURSE CODE</div>
 <div class="subject-title">Subject Title</div>
 <div class="subject-prerequisite">Pre-requisite</div>
 <div class="subject-units">Units</div>
@@ -7779,7 +7779,7 @@ background: var(--primary-dark);
 <h5>Second Semester</h5>
 <div class="subjects-table">
 <div class="subject-row header">
-<div class="subject-code">SUBJECT/<br>COUSRSE CODE</div>
+<div class="subject-code">COURSE CODE</div>
 <div class="subject-title">Subject Title</div>
 <div class="subject-prerequisite">Pre-requisite</div>
 <div class="subject-units">Units</div>
