--- a/index.html
+++ b/index.html
@@ -7187,24 +7187,24 @@ background: var(--primary-dark);
 <div class="stat-value" id="academic-status-summary">
 <div style="display:flex;flex-direction:column;gap:6px;">
 <div style="margin-bottom:8px">
-<small style="color:var(--text-color);font-weight:500;">3rd Year (3rd Trime)</small>
+<small style="color:var(--text-color);font-weight:500;font-size:19px;"><b>3rd Year (3rd Trime)</b></small>
 </div>
 <div style="display:flex;flex-direction:column;gap:4px;">
 <div style="display:flex;justify-content:space-between;align-items:center;">
-<small style="color:var(--text-color);font-weight:400;">Passed</small>
-<span style="color:var(--success);font-weight:400;font-size:16px;">2<hr></span>
+<small style="color:var(--text-color);font-weight:400;font-size:15px;">Passed</small>
+<span style="color:var(--success);font-weight:400;font-size:16px;font-size:15px;">2<hr></span>
 </div>
 <div style="display:flex;justify-content:space-between;align-items:center;">
-<small style="color:var(--text-color);font-weight:400;">INC</small>
-<span style="color:var(--danger);font-weight:400;font-size:16px;"></span>
+<small style="color:var(--text-color);font-weight:400;font-size:15px;">INC</small>
+<span style="color:var(--danger);font-weight:400;font-size:16px;v"></span>
 </div>
 <div style="display:flex;justify-content:space-between;align-items:center;">
-<small style="color:var(--text-color);font-weight:400;">Dropped</small>
-<span style="color:var(--danger);font-weight:400;font-size:16px;">2<hr></span>
+<small style="color:var(--text-color);font-weight:400;font-size:15px;">Dropped</small>
+<span style="color:var(--danger);font-weight:400;font-size:16px;font-size:15px;">2<hr></span>
 </div>
 <div style="display:flex;justify-content:space-between;align-items:center;">
-<small style="color:var(--text-color);font-weight:400;">FAILED</small>
-<span style="color:var(--danger);font-weight:400;font-size:16px;"></span>
+<small style="color:var(--text-color);font-weight:400;font-size:15px;">FAILED</small>
+<span style="color:var(--danger);font-weight:400;font-size:15px;"></span>
 </div>
 </div>
 </div>
