--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ transform: translateY(-50%);
 width: 10px;
 height: 100%;
 background: #D0353F;
-border-radius: 50px 0 0 50px;
+border-radius: 0 0 0 0;
 pointer-events: none;
 }
 
@@ -3939,7 +3939,7 @@ align-items: center;
 .subject-row.header .subject-grade,
 .subject-row.header .subject-remarks {
 font-weight: 600;
-color: #1f2937;
+color: antiquewhite;
 }
 
 .subject-row:not(.header):hover {
