--- a/index.html
+++ b/index.html
@@ -8756,7 +8756,7 @@ Confirm Selection
 <div class="schedule-cell">
 <div class="schedule-item">
 <div class="schedule-subject">OLSA01</div>
-<div class="schedule-time">3:00PM-4:30PM</div>
+<div class="schedule-time">Sir. Joriz Chiong</div>
 <div class="schedule-room">B1.28</div>
 </div>
 </div>
@@ -8765,7 +8765,7 @@ Confirm Selection
 <div class="schedule-cell">
 <div class="schedule-item">
 <div class="schedule-subject">OLSA01</div>
-<div class="schedule-time">3:00PM-4:30PM</div>
+<div class="schedule-time">Sir. Joriz Chiong</div>
 <div class="schedule-room">B1.28</div>
 </div>
 </div>
@@ -8778,7 +8778,7 @@ Confirm Selection
 <div class="schedule-cell">
 <div class="schedule-item">
 <div class="schedule-subject1">OLIPT2</div>
-<div class="schedule-time">4:30PM-6:00PM</div>
+<div class="schedule-time">Sir. Joriz Chiong</div>
 <div class="schedule-room">B1.28</div>
 </div>
 </div>
@@ -8787,7 +8787,7 @@ Confirm Selection
 <div class="schedule-cell">
 <div class="schedule-item">
 <div class="schedule-subject1">OLIPT2</div>
-<div class="schedule-time">4:30PM-6:00PM</div>
+<div class="schedule-time">Sir. Joriz Chiong</div>
 <div class="schedule-room">B1.28</div>
 </div>
 </div>
