--- a/index.html
+++ b/index.html
@@ -6993,7 +6993,7 @@ background: var(--primary-dark);
 <span style="color:var(--text-color);font-size:20px;line-height:1.4;">ICCT Colleges INC. Antipolo Campus  <hr> </span>
 </div>
 <div style="display:flex;align-items:center;">
-<small style="color:var(--text-color);font-size:10px;line-height:1.3;">ICCT Bldg,. Gen. Luna Rd. <br>cor. Ressurection St.,
+<small style="color:var(--text-color);font-size:13px;line-height:1.3;">ICCT Bldg,. Gen. Luna Rd. <br>cor. Ressurection St.,
 <br>Bgy. San Roque, Antipolo City, Rizal
 </small>
 </div>
@@ -8864,61 +8864,66 @@ Confirm Selection
 <table>
 <thead>
 <tr>
-<th>School Year</th>
-<th>Year</th>
-<th>Semester</th>
-<th>Subject</th>
+<th>Curriculum<br> Year</th>
+<th>Academic Term</th>
+<th>Course/<br>Subject Code</th>
+<th>Course/<br>Subject Title</th>
 <th>Professor</th>
 <th>Prelim</th>
 <th>Midterm</th>
 <th>Final</th>
 <th>Status</th>
+<th>Remarks</th>
 </tr>
-</thead>
+<thead>
 <tbody>
 <tr>
 <td>2024-2025</td>
 <td>3rd Year</td>
-<td>3rd Trime</td>
+<td>-</td>
 <td>Applications Development and Emerging Technologies</td>
 <td>Chiong, Joriz</td>
 <td>-</td>
 <td>-</td>
 <td>-</td>
-<td style="color: var(--danger); font-weight: 600;">Dropped</td>
+<td style="color: var(--danger); font-weight: 600">Dropped</td>
+<td style="color: var(--danger); font-weight: 600">Due November 16, 2025</td>
 </tr>
 <tr>
 <td>2024-2025</td>
 <td>3rd Year</td>
-<td>3rd Trime</td>
+<td>-</td>
 <td>Information Assurance and Security 2</td>
 <td>Chiong, Joriz</td>
 <td>-</td>
 <td>-</td>
 <td>-</td>
 <td style="color: var(--danger); font-weight: 600;">Dropped</td>
+<td style="color: var(--danger); font-weight: 600;">Due on November 16, 2025</td>
 </tr>
 <tr>
 <td>2024-2025</td>
 <td>3rd Year</td>
-<td>3rd Trime</td>
+<td>-</td>
 <td>Event Driven Programming</td>
 <td>Chiong, Joriz</td>
 <td><span class="grade grade-good">2.25</span></td>
 <td><span class="grade grade-good">2.50</span></td>
 <td><span class="grade grade-good">2.50</span></td>
-<td>Passed</td>
+<td style="color: var(--success); font-weight: 600;">Passed</td>
+<td>-</td>
 </tr>
 <tr>
 <td>2024-2025</td>
 <td>3rd Year</td>
-<td>3rd Trime</td>
+<td>-</td>
 <td>Cisco Networking 2</td>
 <td>Chiong, Joriz</td>
 <td>-</td>
 <td><span class="grade grade-excellent">2.00</span></td>
 <td><span class="grade grade-excellent">2.00</span></td>
-<td>Passed</td>
+<td style="color: var(--success); font-weight: 600;">Passed</td>
+<td>-</td>
 </tr>
 </tbody>
 </table>
