--- a/index.html
+++ b/index.html
@@ -8881,7 +8881,7 @@ Confirm Selection
 <td>2024-2025</td>
 <td>3rd Year</td>
 <td>-</td>
-<td>Applications Development and <br>Emerging Technologies</td>
+<td>Applications Development <br>and Emerging Technologies</td>
 <td>Chiong, Joriz</td>
 <td>-</td>
 <td>-</td>
