--- a/index.html
+++ b/index.html
@@ -8887,7 +8887,7 @@ Confirm Selection
 <td>-</td>
 <td>-</td>
 <td style="color: var(--danger); font-weight: 600">Dropped</td>
-<td style="color: var(--danger); font-weight: 600">Due November 16, 2025</td>
+<td style="color: var(--danger); font-weight: 600">Due: November 16,<br> 2025</td>
 </tr>
 <tr>
 <td>2024-2025</td>
@@ -8899,7 +8899,7 @@ Confirm Selection
 <td>-</td>
 <td>-</td>
 <td style="color: var(--danger); font-weight: 600;">Dropped</td>
-<td style="color: var(--danger); font-weight: 600;">Due on November 16, 2025</td>
+<td style="color: var(--danger); font-weight: 600;">Due: November 16,<br> 2025</td>
 </tr>
 <tr>
 <td>2024-2025</td>
