--- a/index.html
+++ b/index.html
@@ -8878,33 +8878,33 @@ Confirm Selection
 <thead>
 <tbody>
 <tr>
-<td>2024-2025</td>
 <td>3rd Year</td>
-<td>-</td>
-<td>Applications Development <br>and Emerging Technologies</td>
+<td>3rd Trime</td>
+<td>OLS01</td>
+<td>Applications Development and <br>Emerging Technologies</td>
 <td>Chiong, Joriz</td>
 <td>-</td>
 <td>-</td>
 <td>-</td>
 <td style="color: var(--danger); font-weight: 600">Dropped</td>
-<td style="color: var(--danger); font-weight: 600">Due: November 16,<br> 2025</td>
+<td style="color: var(--danger); font-weight: 600">Due November 16, 2025</td>
 </tr>
 <tr>
-<td>2024-2025</td>
 <td>3rd Year</td>
-<td>-</td>
+<td>3rd Trime</td>
+<td>OLIPT2</td>
 <td>Information Assurance and Security 2</td>
 <td>Chiong, Joriz</td>
 <td>-</td>
 <td>-</td>
 <td>-</td>
 <td style="color: var(--danger); font-weight: 600;">Dropped</td>
-<td style="color: var(--danger); font-weight: 600;">Due: November 16,<br> 2025</td>
+<td style="color: var(--danger); font-weight: 600;">Due on November 16, 2025</td>
 </tr>
 <tr>
-<td>2024-2025</td>
 <td>3rd Year</td>
-<td>-</td>
+<td>3rd Trime</td>
+<td>CPPROG1</td>
 <td>Event Driven Programming</td>
 <td>Chiong, Joriz</td>
 <td><span class="grade grade-good">2.25</span></td>
@@ -8914,9 +8914,9 @@ Confirm Selection
 <td>-</td>
 </tr>
 <tr>
-<td>2024-2025</td>
 <td>3rd Year</td>
-<td>-</td>
+<td>3rd Trime</td>
+<td>OLCISCO</td>
 <td>Cisco Networking 2</td>
 <td>Chiong, Joriz</td>
 <td>-</td>
