--- a/index.html
+++ b/index.html
@@ -9133,7 +9133,7 @@ Confirm Selection
 </div>
 <div class="payment-card">
 <div class="payment-icon">
-<img src="https://clipground.com/images/7eleven-logo-5.png" alt="7/11" style="width: 150px; height: 150px; object-fit: contain; border-radius: 15px 15px 15px 15px;">
+<img src="https://clipground.com/images/7eleven-logo-5.png" alt="7/11" style="width: 160px; height: 160px; object-fit: contain; border-radius: 15px 15px 15px 15px;">
 </div>
 <h3>7/11</h3>
 <p>Pay at any 7/11 store location</p>
@@ -9143,7 +9143,7 @@ Confirm Selection
 </div>
 <div class="payment-card">
 <div class="payment-icon">
-<img src="https://play-lh.googleusercontent.com/8ohEjlb3dzWnIjs7nMqEFiSEzadagMDe2SdnuRH9lI11AbmfsqdQb8bLN9_RvS8EUbE" alt="Palawan Pay" style="width: 150px; height: 150px; object-fit: contain; border-radius: 15px 15px 15px 15px">
+<img src="https://play-lh.googleusercontent.com/8ohEjlb3dzWnIjs7nMqEFiSEzadagMDe2SdnuRH9lI11AbmfsqdQb8bLN9_RvS8EUbE" alt="Palawan Pay" style="width: 170px; height: 170px; object-fit: contain; border-radius: 15px 15px 15px 15px">
 </div>
 <h3>Palawan Pay</h3>
 <p>Pay using your Palawan Pay account</p>
@@ -9173,7 +9173,7 @@ Confirm Selection
 </div>
 <div class="payment-card">
 <div class="payment-icon">
-<i class="fas fa-university"></i>
+<img src="https://cdn4.iconfinder.com/data/icons/simple-peyment-methods/512/bank_transfer-512.png" alt="Bank Transfer" style="width 200px; height:200px; object-fit: contain; border-radius: 10px 10px 10px 10px;">
 </div>
 <h3>Bank Transfer</h3>
 <p>Bank to bank transfer</p>
@@ -9183,7 +9183,7 @@ Confirm Selection
 </div>
 <div class="payment-card">
 <div class="payment-icon">
-<i class="fas fa-credit-card"></i>
+<img src="https://static.vecteezy.com/system/resources/previews/015/805/745/original/credit-card-icon-isolated-credit-debit-card-bank-card-symbol-sign-free-vector.jpg" alt="Credit/Debit Card" style="width 200px; height:200px; object-fit: containg; border-radius: 100px 100px 100px 100px">
 </div>
 <h3>Credit/Debit Card</h3>
 <p>Visa/Master cards</p>
