--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ICCT Skolaris Gateway</title>
+<title>Skolaris.Student.Hub</title>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <style>
 :root {        
@@ -267,18 +267,6 @@ border-radius: 50px 0 0 50px;
 pointer-events: none;
 }
 
-.nav-links li.active::after {
-content: '';
-position: absolute;
-left: 15px;
-top: 50%;
-transform: translateY(-50%);
-width: 10px;
-height: 100%;
-background: #D0353F;
-border-radius: 0 0 0 0;
-pointer-events: none;
-}
 
 .nav-links a {
 color: white;
