--- a/index.html
+++ b/index.html
@@ -9306,6 +9306,7 @@ Confirm Selection
 <thead>
 <tr>
 <th>Department</th>
+<th>Name</th>
 <th>Requirement</th>
 <th>Status</th>
 <th>Action</th>
@@ -9314,48 +9315,56 @@ Confirm Selection
 <tbody>
 <tr>
 <td>Registrar's Office</td>
+<td>Name</td>
 <td>Academic Records Clearance <br>
 <td><span class="status-badge status-completed">Completed</span></td>
 <td><button class="view-action">View</button></td>
 </tr>
 <tr>
 <td>Accounting Office</td>
+<td>Name</td>
 <td>Accounting</td>
 <td><span class="status-badge status-completed">Completed</span></td>
 <td><button class="view-action">View</button></td>
 </tr>
 <tr>
 <td>Library</td>
+<td>Name</td>
 <td>Library Clearance<br>
 <td><span class="status-badge status-completed">Completed</span></td>
 <td><button class="view-action">View</button></td>
 </tr>
 <tr>
 <td>Guidance Office</td>
+<td>Name</td>
 <td>Exit Interview</td>
 <td><span class="status-badge status-completed">Completed</span></td>
 <td><button class="view-action">View</button></td>
 </tr>
 <tr>
 <td>Department of Chair</td>
+<td>Name</td>
 <td>Department Clearance</td>
 <td><span class="status-badge status-completed">Completed</span></td>
 <td><button class="view-action">View</button></td>
 </tr>
 <tr>
 <td>Student Affairs</td>
+<td>Name</td>
 <td>Organization Clearance</td>
 <td><span class="status-badge status-completed">Completed</span></td>
 <td><button class="view-action">View</button></td>
 </tr>
 <tr>
 <td>Laboratory</td>
+<td>Name</td>
 <td>Laboratory Equipment Clearance</td>
 <td><span class="status-badge status-pending">Pending</span></td>
 <td><button class="upload-action">Submit</button></td>
 </tr>
 <tr>
 <td>Alumni Office</td>
+<td>Name</td>
 <td>Alumni Registration</td>
 <td><span class="status-badge status-pending">Pending</span></td>
 <td><button class="upload-action">Register</button></td>
