--- a/index.html
+++ b/index.html
@@ -6447,8 +6447,9 @@
             <!-- Dashboard Section -->
             <div id="dashboard" class="content-section active">
             <h1 class="page-title">Faculty Dashboard</h1>
-            <br><br>
             <span style="font-size:18px; font-weight: 100; color:lightgreen; margin-top:20px ">STUDENTS</span>
+            
+            <br><br>
             <div class="quick-actions">
             <a href="#" class="quick-action-btn" data-section="schedule">
             <i class="fas fa-calendar-check"></i> Check Weekly Schedule
@@ -6549,8 +6550,8 @@
             <br>
             <br>
             <hr>
-            <br><br>
             <span style="font-size:18px; font-weight: 100; color:lightblue ">FACULTY</span>
+            <br><br>
             <div class="stats-grid">
             
             <a href="#" class="quick-action-btn" onclick="openAssessmentClearanceModal(); return false;">
@@ -7677,10 +7678,10 @@
             <div>
             <label style="display: block; margin-bottom: 8px; font-weight: 600; color: var(--text-color); font-size: 14px;">Position</label>
             <select style="width: 100%; padding: 10px; border: 1px solid var(--border-color); border-radius: 6px; background: var(--card-bg); color: var(--text-color); font-size: 14px;">
-            <option>Professor</option>
-            <option>Associate Professor</option>
-            <option>Assistant Professor</option>
-            <option>Instructor</option>
+            <option>Academic Coordinator</option>
+            <option>Department Head</option>
+            <option>Dean</option>
+            <option>Program Chair</option>
             </select>
             </div>
             <div>
