--- a/index.html
+++ b/index.html
@@ -8215,7 +8215,7 @@
             <div class="schedule-cell"></div>
             <div class="schedule-cell">
             <div class="schedule-item">
-            <div class="schedule-subject" style="display: flex; flex-direction: column; gap: 5px; width: 80%;">
+            <div class="schedule-subject" style="display: flex; flex-direction: column; gap: 8px;margin-bottom:10px; width: 80%;">
                 <span class="left-text">OLSA01</span>
                 <span class="right-text;" style="color:lightgreen;">B1.28</span></div>
             <div class="schedule-time">
