--- a/index.html
+++ b/index.html
@@ -8428,14 +8428,16 @@
             <div class="schedule-cell"></div>
             <div class="schedule-cell"></div>
             <div class="schedule-cell">
-            <div class="schedule-item">
-            <div class="schedule-subject" style="display: flex; flex-direction: column; gap: 8px;margin-bottom:10px; width: 80%;">
-                <span class="left-text">OLSA01</span>
-                <span class="right-text;" style="color:lightgreen;">B1.28</span></div>
+            <div class="schedule-subject">
+                <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+                    <span style="font-weight: 600; color: pink; text-align: left;">OLSA01</span>
+                    <span style="font-weight: 700; color: lightgreen; text-align: right;">B1.28</span>
+                </div>
             <div class="schedule-time">
-                    <span class="left-text">LFAU211M001</span>
-                    <span class="right-text" style="color: palevioletred">120</span>
-                    </div>
+                    <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+                    <span style="font-weight: 600; color: blueviolet; text-align: left;">LFAU211M001</span> &nbsp;
+                    <span style="font-weight: 700; color: lightgreen; text-align: right;">120</span>
+                    </div></div>
             <div class="schedule-room">
               </span>
             </div> 
@@ -8445,14 +8447,14 @@
             <div class="schedule-cell"></div>
             <div class="schedule-cell">
             <div class="schedule-item">
-            <div class="schedule-subject" style="display: flex; flex-direction: column; gap: 8px; margin-bottom: 10px; width: 80%;">
-                <span class="left-text">OLSA01</span>
-                <span class="right-text" style="color:lightgreen;">B1.28</span>
-                </div>
-        <div class="schedule-time">
-            <span class="left-text">LFAU211M001</span>
-            <span class="right-text" style="color: palevioletred">120</span>
-            </div>
+            <div class="schedule-subject" style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+                    <span style="font-weight: 600; color: pink; text-align: left;">WS1</span>
+                    <span style="font-weight: 700; color: lightgreen; text-align: right;">B1.28</span>
+                    </div>
+        <div class="schedule-time" style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+                    <span style="font-weight: 600; color: blueviolet; text-align: left;">LFAU211M001</span> &nbsp;
+                    <span style="font-weight: 700; color: lightgreen; text-align: right;">120</span>
+                    </div>
         <div class="schedule-room">
             <span class="left-text"></span>
         </div>
@@ -8465,14 +8467,14 @@
             <div class="schedule-cell"></div>
             <div class="schedule-cell">
             <div class="schedule-item">
-            <div class="schedule-subject1" style="display: flex; flex-direction: column; gap: 8px; margin-bottom: 10px; width: 80%;">
-                <span class="left-text">WS1</span>
-                <span class="right-text" style="color:lightgreen">B1.28</span>
-            </div>
-        <div class="schedule-time">
-            <span class="left-text">LFAU211M001</span>
-            <span class="right-text" style="color: palevioletred;">120</span>
-            </div>
+            <div class="schedule-subject1" style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+                    <span style="font-weight: 600; color: orangered; text-align: left;">WS1</span>
+                    <span style="font-weight: 700; color: lightgreen; text-align: right;">B1.28</span>
+                    </div>
+        <div class="schedule-time" style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
+<span style="font-weight: 600; color: blueviolet; text-align: left;">LFAU211M001</span> &nbsp;
+<span style="font-weight: 700; color: lightgreen; text-align: right;">120</span>
+</div>
         <div class="schedule-room">
         </div>
             </div>
@@ -8482,14 +8484,14 @@
             <div class="schedule-cell">
             <div class="schedule-item">
             <div class="schedule-subject1" style="display: flex; flex-direction: column; gap: 8px; margin-bottom: 10px; width: 80%;">
-                <span class="left-text">WS1</span>
-                <span class="right-text" style="color:lightgreen;">B1.28</span>
+                <span style="color:orangered; text-align: left">OLSA01</span>
+                <span style="color:lightgreen; text-align:right">B1.28</span>
                 </div>
         <div class="schedule-time"></div>
-        <div class="schedule-time">
-            <span class="left-text">LFAU211M001</span>
-            <span class="right-text" style="color: palevioletred;">120</span>
-        </div>
+        <div class="schedule-subject"style="display: flex; flex-direction: column; gap: 8px; margin-bottom: 10px; width: 80%;">
+<span style="color:orangered; text-align: left">LFAU211M001</span> &nbsp;
+<span style="color:lightgreen; text-align:right">120</span>
+</div>
             </div>
             </div>
             <div class="schedule-cell"></div>
