--- a/index.html
+++ b/index.html
@@ -6972,16 +6972,41 @@ background: var(--primary-dark);
 </div>
 <div class="stat-label" style="color:var(--text-color)">Balance Due</div>
 </div>
+</div>
+<hr>
 
+
+<div class="stats-grid">
+    
+    <div class="stat-card" id="seminars-summary-card" onclick="openStatCardModal('seminars')" style="cursor: pointer;">
+    <div class="stat-value" id="seminars-summary">
+        <div style="display:flex;flex-direction:column;gap:6px;">
+            <div style="display:flex;justify-content:space-between;align-items:center;">
+                <small style="color:var(--text-color); font-weight:400;font-size:15px;">Orientation Seminar</small>
+                <i class="fas fa-check-circle" style="color:var(--success)"></i>
+            </div>
+            <div style="display:flex;justify-content:space-between;align-items:center;">
+                <small style="color:var(--text-color);font-weight:400;font-size:15px;">Industry Visit</small>
+                <i class="fas fa-check-circle" style="color:var(--success)"></i>
+            </div>
+            <div style="display:flex;justify-content:space-between;align-items:center;">
+                <small style="color:var(--text-color); font-weight:400;font-size:15px;">Historical Field Trip</small>
+                <i class="fas fa-times-circle" style="color:var(--danger)"></i>
+            </div>
+        </div>
+    </div>
+    <div class="stat-label" style="color:var(--text-color)">Seminars/Fieldtrips</div>
+</div>
+    
 <div class="stat-card" id="ojt-summary-card" onclick="openStatCardModal('ojt')" style="cursor: pointer;">
 <div class="stat-value" id="ojt-summary">
 <div style="display:flex;flex-direction:column;gap:6px;">
 
 <div style="display:flex;align-items:center;">
-<span style="color:var(--text-color);font-size:20px;line-height:1.4;">ICCT Colleges INC. Antipolo Campus  <hr> </span>
+<span style="color:var(--text-color);font-size:15px;line-height:1.4;">ICCT Colleges INC. Antipolo Campus  <hr> </span>
 </div>
 <div style="display:flex;align-items:center;">
-<small style="color:var(--text-color);font-size:13px;line-height:1.3;">ICCT Bldg,. Gen. Luna Rd. <br>cor. Ressurection St.,
+<small style="color:var(--text-color);font-weight:400;font-size:10px;">ICCT Bldg,. Gen. Luna Rd. <br>cor. Ressurection St.,
 <br>Bgy. San Roque, Antipolo City, Rizal
 </small>
 </div>
@@ -6995,10 +7020,10 @@ background: var(--primary-dark);
 <div class="stat-value" id="integration-summary">
 <div style="display:flex;flex-direction:column;gap:6px;">
 <div style="display:flex;align-items:center;">
-<span style="color:var(--text-color);font-size:18px;line-height:1.4;">Integration Activities</span>
+<span style="color:var(--text-color);font-size:15px;line-height:1.4;">Integration Activities</span>
 </div>
 <div style="display:flex;justify-content:space-between;align-items:center;margin-top:8px;">
-<small style="color:var(--text-color);font-size:15px;">Status:</small>
+<small style="color:var(--text-color);font-weight:400;font-size:15px;">Status:</small>
 <i class="fas fa-check-circle" style="color:var(--success)"></i>
 </div>
 </div>
@@ -7010,52 +7035,18 @@ background: var(--primary-dark);
 <div class="stat-value" id="scholarship-summary">
 <div style="display:flex;flex-direction:column;gap:6px;">
 <div style="display:flex;align-items:center;color:var(--text-color);">
-<span style="text-align:center;font-size:23px;line-height:1.4;">Ynares Youth  (2022)  <hr></span>
+<small style="text-align:center; font-weight:400;font-size:15px;">Ynares Youth  (2022)  <hr></small>
 </div>
 </div>
 </div>
 <div class="stat-label" style="color:var(--text-color)">Scholarship(s)</div>
 </div>                                             
 
-<div class="stat-card" id="uniforms-summary-card" onclick="openStatCardModal('uniforms')" style="cursor: pointer;">
-<div class="stat-value" id="uniforms-summary">
-<div style="display:flex;flex-direction:column;gap:6px;">
-<div data-uniform="BSIT" style="display:flex;justify-content:space-between;align-items:center;">
-<small style="color:var(--text-color); font-size:20px;">BSIT Uniform</small>
-<i class="fas fa-check-circle" style="color:var(--success)"></i>
-</div>
-<div data-uniform="COLLEGE P.E" style="display:flex;justify-content:space-between;align-items:center;">
-<small style="color:var(--text-color);font-size:20px;">College P.E.</small>
-<i class="fas fa-check-circle" style="color:var(--success)"></i>
-</div>
-<div data-uniform="NSTP" style="display:flex;justify-content:space-between;align-items:center;">
-<small style="color:var(--text-color);font-size:20px;">NSTP Uniform</small>
-<i class="fas fa-check-circle" style="color:var(--success)"></i>
-</div>
-</div>
-</div>
-<div class="stat-label" style="color:var(--text-color)">Uniform Compliance <command type="command" label="" icon="" /></div>
-</div>
 
-<div class="stat-card" id="seminars-summary-card" onclick="openStatCardModal('seminars')" style="cursor: pointer;">
-<div class="stat-value" id="seminars-summary">
-<div style="display:flex;flex-direction:column;gap:6px;">
-<div style="display:flex;justify-content:space-between;align-items:center;">
-<small style="color:var(--text-color); font-size:20px;">Orientation Seminar</small>
-<i class="fas fa-check-circle" style="color:var(--success)"></i>
 </div>
-<div style="display:flex;justify-content:space-between;align-items:center;">
-<small style="color:var(--text-color);font-size:20px;">Industry Visit</small>
-<i class="fas fa-check-circle" style="color:var(--success)"></i>
-</div>
-<div style="display:flex;justify-content:space-between;align-items:center;">
-<small style="color:var(--text-color); font-size:20px;">Historical Field Trip</small>
-<i class="fas fa-times-circle" style="color:var(--danger)"></i>
-</div>
-</div>
-</div>
-<div class="stat-label" style="color:var(--text-color)">Seminars/Fieldtrips</div>
-</div>
+<hr>
+<div class="stats-grid">
+
 
 <div class="stat-card" id="attendance-summary-card" onclick="openStatCardModal('attendance')" style="cursor: pointer;">
 <div class="stat-value" id="attendance-summary">
@@ -7092,34 +7083,29 @@ background: var(--primary-dark);
 <div class="stat-value">
 <div style="display:flex;flex-direction:column;gap:6px;">
 <div style="margin-bottom:8px">
-<small style="color:var(--text-color);font-weight:400;font-size:19px;"><b>Radiology Report</b></small>
 </div>
 <div style="display:flex;flex-direction:column;gap:4px;">
 <div style="display:flex;justify-content:space-between;align-items:center;">
-<small style="color:var(--text-color);font-weight:400;font-size:15px;">1st Yr</small>
+<small style="color:var(--text-color);font-weight:400;font-size:15px;">Health History</small>
 <div style="display:flex;align-items:center;gap:4px;">
-<small style="color:var(--text-color);font-weight:400; font-size:15px;">Sep 5, 2022<hr></small>
 <i class="fas fa-check-circle" style="color:var(--success)"></i>
 </div>
 </div>
 <div style="display:flex;justify-content:space-between;align-items:center;">
-<small style="color:var(--text-color);font-weight:400;font-size:15px;">2nd Yr</small>
+<small style="color:var(--text-color);font-weight:400;font-size:15px;">Health Assessment</small>
 <div style="display:flex;align-items:center;gap:4px;">
-<small style="color:var(--text-color);font-weight:400;font-size:15px;">Aug 20, 2023<hr></small>
 <i class="fas fa-check-circle" style="color:var(--success)"></i>
 </div>
 </div>
 <div style="display:flex;justify-content:space-between;align-items:center;">
-<small style="color:var(--text-color);font-weight:400;font-size:15px;">3rd Yr</small>
+<small style="color:var(--text-color);font-weight:400;font-size:15px;">Substance Screening</small>
 <div style="display:flex;align-items:center;gap:4px;">
-<small style="color:var(--text-color);font-weight:400;font-size:15px;">Sep 10, 2024 <hr></small>
 <i class="fas fa-check-circle" style="color:var(--success)"></i>
 </div>
 </div>
 <div style="display:flex;justify-content:space-between;align-items:center;">
-<small style="color:var(--text-color);font-weight:400;font-size:15px;">4th Yr</small>
+<small style="color:var(--text-color);font-weight:400;font-size:15px;">Radiology Report</small>
 <div style="display:flex;align-items:center;gap:4px;">
-<small style="color:var(--text-color);font-weight:400;font-size:15px;">Oct 15, 2025<hr></small>
 <i class="fas fa-check-circle" style="color:var(--success)"></i>
 </div>
 </div>
@@ -7129,47 +7115,6 @@ background: var(--primary-dark);
 <div class="stat-label" style="color:var(--text-color)">Wellness & Care</div>
 </div>
 
-<div class="stat-card" id="drug-test-summary-card" onclick="openStatCardModal('drugtest')" style="cursor: pointer;">
-<div class="stat-value" id="drug-test-summary">
-<div style="display:flex;flex-direction:column;gap:6px;">
-<div style="margin-bottom:8px">
-<small style="color:var(--text-color);font-weight:400;font-size:19px;"><b>Substance Screening</b></small>
-</div>
-<div style="display:flex;flex-direction:column;gap:4px;">
-<div style="display:flex;justify-content:space-between;align-items:center;">
-<small style="color:var(--text-color);font-weight:400;font-size:15px;">1st Yr</small>
-<div style="display:flex;align-items:center;gap:4px;">
-<small style="color:var(--text-color);font-weight:400;font-size:15px;">Sep 15,2022 <hr></small>
-<i class="fas fa-check-circle" style="color:var(--success)"></i>
-</div>
-</div>
-<div style="display:flex;justify-content:space-between;align-items:center;">
-<small style="color:var(--text-color);font-weight:400;font-size:15px;">2nd Yr</small>
-<div style="display:flex;align-items:center;gap:4px;">
-<small style="color:var(--text-color);font-weight:400;font-size:15px;">Sep 18, 2023
-<hr></small>
-<i class="fas fa-check-circle" style="color:var(--success)"></i>
-</div>
-</div>
-<div style="display:flex;justify-content:space-between;align-items:center;">
-<small style="color:var(--text-color);font-weight:400;font-size:15px;">3rd Yr</small>
-<div style="display:flex;align-items:center;gap:4px;">
-<small style="color:var(--text-color);font-weight:400;font-size:15px;">Sep 18, 2023<hr style="color:var(--gray)"></small>
-<i class="fas fa-check-circle" style="color:var(--success)"></i>
-</div>
-</div>
-<div style="display:flex;justify-content:space-between;align-items:center;">
-<small style="color:var(--text-color);font-weight:400;font-size:15px;">4th Yr</small>
-<div style="display:flex;align-items:center;gap:4px;">
-<small style="color:var(--text-color);font-weight:400;font-size:15px;">Sep 16, 2025<hr></small>
-<i class="fas fa-check-circle" style="color:var(--success)"></i>
-</div>
-</div>
-</div>
-</div>
-</div>
-<div class="stat-label" style="color:var(--text-color)">Wellness & Care</div>
-</div>
 
 <div class="stat-card" id="academic-status-card" onclick="openStatCardModal('academic-status')" style="cursor: pointer;">
 <div class="stat-value" id="academic-status-summary">
@@ -7199,6 +7144,29 @@ background: var(--primary-dark);
 </div>
 <div class="stat-label" style="color:var(--text-color)">Academic Status</div>
 </div>
+
+<div class="stat-card" id="uniforms-summary-card" onclick="openStatCardModal('uniforms')" style="cursor: pointer;">
+<div class="stat-value" id="uniforms-summary">
+<div style="display:flex;flex-direction:column;gap:6px;">
+<div data-uniform="BSIT" style="display:flex;justify-content:space-between;align-items:center;">
+<small style="color:var(--text-color); font-weight:400;font-size:15px;">BSIT Uniform</small>
+<i class="fas fa-check-circle" style="color:var(--success)"></i>
+</div>
+<div data-uniform="COLLEGE P.E" style="display:flex;justify-content:space-between;align-items:center;">
+<small style="color:var(--text-color);font-weight:400;font-size:15px;">College P.E.</small>
+<i class="fas fa-check-circle" style="color:var(--success)"></i>
+</div>
+<div data-uniform="NSTP" style="display:flex;justify-content:space-between;align-items:center;">
+<small style="color:var(--text-color);font-weight:400;font-size:15px;">NSTP Uniform</small>
+<i class="fas fa-check-circle" style="color:var(--success)"></i>
+</div>
+</div>
+</div>
+<div class="stat-label" style="color:var(--text-color) ">Uniform Compliance <command type="command" label="" icon="" /></div>
+</div>
+
+
+
 </div>
 
 <div class="stats-grid years-grid">
@@ -9481,23 +9449,6 @@ Confirm Selection
 <p style="color: var(--gray); margin: 0; font-size: 13px; line-height: 1.5;">Student's General Physical Exam Results, Vital Signs, and Physician's Findings.</p>
 </div>
 <div class="loading-overlay" id="physical-exam-loading" style="display: none;">
-<div style="text-align: center;">
-<div class="loading-spinner"></div>
-<div class="loading-text">Loading...</div>
-</div>
-</div>
-</div>
-
-<!-- Substance Screening -->
-<div class="overview-card health-care-card" id="drug-test-card" onclick="openDrugTestModal()" style="cursor: pointer; border: 2px solid var(--primary); background: var(--card-bg); transition: all 0.3s ease; position: relative;">
-<div class="overview-icon" style="background: var(--primary); color: white; align-self: center;">
-<i class="fas fa-vial"></i>
-</div>
-<div class="overview-content">
-<h4 style="color: var(--primary); margin: 0 0 8px 0; font-size: 17px; font-weight: 700;">Substance Screening</h4>
-<p style="color: var(--gray); margin: 0; font-size: 13px; line-height: 1.5;">Records of Drug Testing results and compliance with School/CHED</p>
-</div>
-<div class="loading-overlay" id="drug-test-loading" style="display: none;">
 <div style="text-align: center;">
 <div class="loading-spinner"></div>
 <div class="loading-text">Loading...</div>
