--- a/index.html
+++ b/index.html
@@ -2033,6 +2033,7 @@ grid-template-columns: repeat(5, 1fr) !important;
 background: linear-gradient(135deg, var(--card-bg) 0%, rgba(255,255,255,0.8) 100%);
 border-radius: 16px;
 padding: 25px;
+max-width:100%;
 box-shadow: 0 8px 25px rgba(0,0,0,0.1);
 border: 2px solid transparent;
 transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -7049,7 +7050,7 @@ background: var(--primary-dark);
 <div class="stat-value" id="attendance-summary">
 <div style="display:flex;flex-direction:column;gap:6px;">
 <div style="margin-bottom:8px">
-<small style="color:var(--text-color);font-weight:500;font-size:19px;"><b>4th Year (1st Trime)</b></small>
+<small style="color:var(--text-color);font-weight:500;font-size:15px;"><b>4th Year (1st Trime)</b></small>
 </div>
 
 
@@ -7117,7 +7118,7 @@ background: var(--primary-dark);
 <div class="stat-value" id="academic-status-summary">
 <div style="display:flex;flex-direction:column;gap:6px;">
 <div style="margin-bottom:8px">
-<small style="color:var(--text-color);font-weight:500;font-size:19px;"><b>3rd Year (3rd Trime)</b></small>
+<small style="color:var(--text-color);font-weight:500;font-size:15px;"><b>3rd Year (3rd Trime)</b></small>
 </div>
 <div style="display:flex;flex-direction:column;gap:4px;">
 <div style="display:flex;justify-content:space-between;align-items:center;">
@@ -7133,7 +7134,7 @@ background: var(--primary-dark);
 <span style="color:var(--danger);font-weight:400;font-size:16px;font-size:15px;">2<hr></span>
 </div>
 <div style="display:flex;justify-content:space-between;align-items:center;">
-<small style="color:var(--text-color);font-weight:400;font-size:15px;">FAILED</small>
+<small style="color:var(--text-color);font-weight:400;font-size:15px;">Failed</small>
 <span style="color:var(--danger);font-weight:400;font-size:15px;"></span>
 </div>
 </div>
