--- a/index.html
+++ b/index.html
@@ -2182,6 +2182,10 @@ transition: width 0.5s ease;
 }
 
 /* Reduce width of stat-cards in years-grid */
+.years-grid .stat-card {
+width: 60px;
+margin: 0 auto;
+}
 
 /* Program selection styles */
 .program-option-btn.selected-program {
@@ -9129,7 +9133,7 @@ Confirm Selection
 </div>
 <div class="payment-card">
 <div class="payment-icon">
-<img src="https://cdn4.iconfinder.com/data/icons/simple-peyment-methods/512/bank_transfer-512.png" alt="Bank Transfer" style="width 200px; height:200px; object-fit: contain; border-radius: 10px 10px 10px 10px;">
+<img src="https://cdn4.iconfinder.com/data/icons/simple-peyment-methods/512/bank_transfer-512.png" alt="Bank Transfer" style="width: 200px; height:200px; object-fit: contain; border-radius: 10px 10px 10px 10px;">
 </div>
 <h3>Bank Transfer</h3>
 <p>Bank to bank transfer</p>
@@ -9139,7 +9143,7 @@ Confirm Selection
 </div>
 <div class="payment-card">
 <div class="payment-icon">
-<img src="https://static.vecteezy.com/system/resources/previews/015/805/745/original/credit-card-icon-isolated-credit-debit-card-bank-card-symbol-sign-free-vector.jpg" alt="Credit/Debit Card" style="width 200px; height:200px; object-fit: containg; border-radius: 100px 100px 100px 100px">
+<img src="https://static.vecteezy.com/system/resources/previews/015/805/745/original/credit-card-icon-isolated-credit-debit-card-bank-card-symbol-sign-free-vector.jpg" alt="Credit/Debit Card" style="width: 200px; height:200px; object-fit: containg; border-radius: 100px 100px 100px 100px">
 </div>
 <h3>Credit/Debit Card</h3>
 <p>Visa/Master cards</p>
