--- a/index.html
+++ b/index.html
@@ -2026,14 +2026,13 @@ margin-bottom: 25px;
 }
 
 .years-grid {
-grid-template-columns: repeat(4, 0fr) !important;
+grid-template-columns: repeat(5, 1fr) !important;
 }
 
 .stat-card {
 background: linear-gradient(135deg, var(--card-bg) 0%, rgba(255,255,255,0.8) 100%);
 border-radius: 16px;
 padding: 25px;
-max-width:100%;
 box-shadow: 0 8px 25px rgba(0,0,0,0.1);
 border: 2px solid transparent;
 transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
@@ -2042,7 +2041,6 @@ display: flex;
 flex-direction: column;
 position: relative;
 overflow: hidden;
-max-width: 100%;
 cursor: pointer;
 background-image: 
     linear-gradient(135deg, rgba(30,58,95,0.05) 0%, transparent 50%),
@@ -2179,11 +2177,6 @@ height: 100%;
 background-color: var(--primary);
 border-radius: 4px;
 transition: width 0.5s ease;
-}
-
-/* Reduce width of stat-cards in years-grid */
-.years-grid .stat-card {
-width:200px;
 }
 
 /* Program selection styles */
@@ -6980,7 +6973,7 @@ background: var(--primary-dark);
 <div class="stat-label" style="color:var(--text-color)">Balance Due</div>
 </div>
 </div>
-<br>
+
 
 <div class="stats-grid">
     
@@ -7041,15 +7034,16 @@ background: var(--primary-dark);
 <div class="stat-value" id="scholarship-summary">
 <div style="display:flex;flex-direction:column;gap:6px;">
 <div style="display:flex;align-items:center;color:var(--text-color);">
-<small style="text-align:center; font-weight:400;font-size:15px;">President's Lifestyle<hr>
-DCLC Scholar<hr></small>
+<small style="text-align:center; font-weight:400;font-size:15px;">President's List<hr>
+<br>DCLC Scholar<hr></small>
 </div>
 </div>
 </div>
 <div class="stat-label" style="color:var(--text-color)">Scholarship(s)</div>
 </div>                                             
+
+
 </div>
-<br>
 <div class="stats-grid">
 
 
@@ -7141,7 +7135,7 @@ DCLC Scholar<hr></small>
 <span style="color:var(--danger);font-weight:400;font-size:16px;font-size:15px;">2<hr></span>
 </div>
 <div style="display:flex;justify-content:space-between;align-items:center;">
-<small style="color:var(--text-color);font-weight:400;font-size:15px;">Failed</small>
+<small style="color:var(--text-color);font-weight:400;font-size:15px;">FAILED</small>
 <span style="color:var(--danger);font-weight:400;font-size:15px;"></span>
 </div>
 </div>
@@ -7173,7 +7167,6 @@ DCLC Scholar<hr></small>
 
 
 </div>
-<br>
 
 <div class="stats-grid years-grid">
 <div class="stat-card">
@@ -7191,8 +7184,6 @@ DCLC Scholar<hr></small>
 <div class="stat-card">
 <div class="stat-value">&#8734;<br>in progress<div class="progress-bar"><div style="width: 90%; height: 100%; background-color: yellow; border-radius: 4px;"></div></div></div>
 <div class="stat-label">4th Year</div>
-</div>
-
 </div>
 
 </div>
@@ -9132,7 +9123,7 @@ Confirm Selection
 </div>
 <div class="payment-card">
 <div class="payment-icon">
-<img src="https://cdn4.iconfinder.com/data/icons/simple-peyment-methods/512/bank_transfer-512.png" alt="Bank Transfer" style="width: 200px; height:200px; object-fit: contain; border-radius: 10px 10px 10px 10px;">
+<img src="https://cdn4.iconfinder.com/data/icons/simple-peyment-methods/512/bank_transfer-512.png" alt="Bank Transfer" style="width 200px; height:200px; object-fit: contain; border-radius: 10px 10px 10px 10px;">
 </div>
 <h3>Bank Transfer</h3>
 <p>Bank to bank transfer</p>
@@ -9142,7 +9133,7 @@ Confirm Selection
 </div>
 <div class="payment-card">
 <div class="payment-icon">
-<img src="https://static.vecteezy.com/system/resources/previews/015/805/745/original/credit-card-icon-isolated-credit-debit-card-bank-card-symbol-sign-free-vector.jpg" alt="Credit/Debit Card" style="width: 200px; height:200px; object-fit: containg; border-radius: 100px 100px 100px 100px">
+<img src="https://static.vecteezy.com/system/resources/previews/015/805/745/original/credit-card-icon-isolated-credit-debit-card-bank-card-symbol-sign-free-vector.jpg" alt="Credit/Debit Card" style="width 200px; height:200px; object-fit: containg; border-radius: 100px 100px 100px 100px">
 </div>
 <h3>Credit/Debit Card</h3>
 <p>Visa/Master cards</p>
