--- a/index.html
+++ b/index.html
@@ -2037,6 +2037,7 @@ box-shadow: 0 8px 25px rgba(0,0,0,0.1);
 border: 2px solid transparent;
 transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 min-height: 120px;
+max-width:100%;
 display: flex;
 flex-direction: column;
 position: relative;
@@ -6973,7 +6974,7 @@ background: var(--primary-dark);
 <div class="stat-label" style="color:var(--text-color)">Balance Due</div>
 </div>
 </div>
-
+<br>
 
 <div class="stats-grid">
     
@@ -7041,9 +7042,8 @@ background: var(--primary-dark);
 </div>
 <div class="stat-label" style="color:var(--text-color)">Scholarship(s)</div>
 </div>                                             
-
-
 </div>
+<br>
 <div class="stats-grid">
 
 
@@ -7111,9 +7111,9 @@ background: var(--primary-dark);
 </div>
 </div>
 </div>
+
 <div class="stat-label" style="color:var(--text-color)">Wellness & Care</div>
 </div>
-
 
 <div class="stat-card" id="academic-status-card" onclick="openStatCardModal('academic-status')" style="cursor: pointer;">
 <div class="stat-value" id="academic-status-summary">
@@ -7167,6 +7167,7 @@ background: var(--primary-dark);
 
 
 </div>
+<br>
 
 <div class="stats-grid years-grid">
 <div class="stat-card">
