--- a/index.html
+++ b/index.html
@@ -7071,7 +7071,7 @@ background: var(--primary-dark);
 </div>
 </div>
 </div>
-<div class="stat-label" style="color:var(--text-color)">Academic Status<span style="font-weight:400;font-size:10px;">(Previous)</span></div>
+<div class="stat-label" style="color:var(--text-color)">Academic Status<span style="font-weight:400;font-size:10px;"> &nbsp;(Previous Trim)</span></div>
 </div>
 
 
