--- a/index.html
+++ b/index.html
@@ -7003,11 +7003,11 @@ background: var(--primary-dark);
 <div style="display:flex;flex-direction:column;gap:6px;">
 
 <div style="display:flex;align-items:center;">
-<span style="color:var(--text-color);font-size:15px;line-height:1.4;">ICCT Colleges INC. Antipolo Campus  <hr> </span>
+<span style="color:var(--text-color);font-size:15px;line-height:1.4;">ICCT Colleges/Antipolo<hr> </span>
 </div>
 <div style="display:flex;align-items:center;">
-<small style="color:var(--text-color);font-weight:400;font-size:10px;">ICCT Bldg,. Gen. Luna Rd. <br>cor. Ressurection St.,
-<br>Bgy. San Roque, Antipolo City, Rizal
+<small style="color:var(--text-color);font-weight:400;font-size:10px;">
+Bgy. San Roque, Antipolo City, Rizal
 </small>
 </div>
 </div>
@@ -7049,7 +7049,7 @@ background: var(--primary-dark);
 <div class="stat-value" id="academic-status-summary">
 <div style="display:flex;flex-direction:column;gap:6px;">
 <div style="margin-bottom:8px">
-<small style="color:var(--text-color);font-weight:500;font-size:15px;"><b>3rd Year (3rd Trime)</b></small>
+<small style="color:var(--text-color);font-weight:400;font-size:15px;"><b>3rd Year <span style="font-weight:100;font-size:10px;">(3rd Trim)</span></b></small>
 </div>
 <div style="display:flex;flex-direction:column;gap:4px;">
 <div style="display:flex;justify-content:space-between;align-items:center;">
@@ -7071,7 +7071,7 @@ background: var(--primary-dark);
 </div>
 </div>
 </div>
-<div class="stat-label" style="color:var(--text-color)">Academic Status<span style="font-weight:400;font-size:10px;"> &nbsp;(Previous Trim)</span></div>
+<div class="stat-label" style="color:var(--text-color)">Academic Status<span style="font-weight:400;font-size:10px;"> &nbsp;(Prev. Trim)</span></div>
 </div>
 
 
@@ -7079,7 +7079,7 @@ background: var(--primary-dark);
 <div class="stat-value" id="attendance-summary">
 <div style="display:flex;flex-direction:column;gap:6px;">
 <div style="margin-bottom:8px">
-<small style="color:var(--text-color);font-weight:500;font-size:15px;"><b>4th Year (1st Trime)</b></small>
+<small style="color:var(--text-color);font-weight:500;font-size:15px;"><b>4th Year</b> <span style="font-wegith:100; font-size: 10px">(1st Trim)</span></small>
 </div>
 
 
