--- a/index.html
+++ b/index.html
@@ -7003,7 +7003,7 @@ background: var(--primary-dark);
 <div style="display:flex;flex-direction:column;gap:6px;">
 
 <div style="display:flex;align-items:center;">
-<span style="color:var(--text-color);font-size:15px;line-height:1.4;">ICCT Colleges/Antipolo<hr> </span>
+<span style="color:var(--text-color);font-size:15px;line-height:1.4;">ICCT Colleges - Antipolo<hr> </span>
 </div>
 <div style="display:flex;align-items:center;">
 <small style="color:var(--text-color);font-weight:400;font-size:10px;">
@@ -7049,7 +7049,7 @@ Bgy. San Roque, Antipolo City, Rizal
 <div class="stat-value" id="academic-status-summary">
 <div style="display:flex;flex-direction:column;gap:6px;">
 <div style="margin-bottom:8px">
-<small style="color:var(--text-color);font-weight:400;font-size:15px;"><b>3rd Year <span style="font-weight:100;font-size:10px;">(3rd Trim)</span></b></small>
+<small style="color:var(--text-color);font-weight:400;font-size:15px;"><b>3rd Year</b> <span style="font-weight:100;font-size:10px;">(3rd Trim)</span></small>
 </div>
 <div style="display:flex;flex-direction:column;gap:4px;">
 <div style="display:flex;justify-content:space-between;align-items:center;">
