--- a/index.html
+++ b/index.html
@@ -7049,7 +7049,7 @@ Bgy. San Roque, Antipolo City, Rizal
 <div class="stat-value" id="academic-status-summary">
 <div style="display:flex;flex-direction:column;gap:6px;">
 <div style="margin-bottom:8px">
-<small style="color:var(--text-color);font-weight:400;font-size:15px;"><b>3rd Year</b> <span style="font-weight:100;font-size:10px;">(3rd Trim)</span></small>
+<small style="color:var(--text-color);font-weight:400;font-size:15px;"><b>3rd Year</b> <span style="font-weight:200;font-size:10px;">(3rd Trim)</span></small>
 </div>
 <div style="display:flex;flex-direction:column;gap:4px;">
 <div style="display:flex;justify-content:space-between;align-items:center;">
@@ -7079,7 +7079,7 @@ Bgy. San Roque, Antipolo City, Rizal
 <div class="stat-value" id="attendance-summary">
 <div style="display:flex;flex-direction:column;gap:6px;">
 <div style="margin-bottom:8px">
-<small style="color:var(--text-color);font-weight:500;font-size:15px;"><b>4th Year</b> <span style="font-wegith:100; font-size: 10px">(1st Trim)</span></small>
+<small style="color:var(--text-color);font-weight:500;font-size:15px;"><b>4th Year</b> <span style="font-weigth:200; font-size: 10px">(1st Trim)</span></small>
 </div>
 
 
